<resources>
    <string name="login_icon_description">Иконка входа</string>
    <string name="login_title">Войти</string>
    <string name="email_icon_description">Иконка email</string>
    <string name="password_icon_description">Иконка пароля</string>
    <string name="email">Email</string>
    <string name="password">Пароль</string>
    <string name="first_time">У нас впервые?</string>
    <string name="signup">Зарегистрироваться</string>
    <string name="signup_icon_description">Иконка регистрации</string>
    <string name="user_icon_description">Иконка пользователя</string>
    <string name="user">Имя пользователя</string>
    <string name="app_name">Викторина</string>
    <string name="choose_quiz">Выберите викторину:</string>
    <string name="general_erudition">1 билет</string>
    <string name="logout_btn">Выйти из \nаккаунта</string>
    <string name="quiz_icon_description">Иконка викторины</string>
    <string name="generalErudition_icon_description">Иконка общей эрудиции</string>
    <string name="film_icon_description">Иконка кино и телевидения</string>
    <string name="music_icon_description">Иконка музыки</string>
    <string name="geography_icon_description">Иконка географии</string>
    <string name="film">2 билет</string>
    <string name="music">3 билет</string>
    <string name="geography">4 билет</string>
    <string name="start_quiz">Начать викторину</string>
    <string name="next_question">Следующий\nвопрос</string>
    <string name="start_new_quiz">Начать\nновую викторину</string>
    <string name="result">Ваш результат:</string>
    <string name="correct_answers_display">Количество правильных ответов: %1$d</string>
    <string name="incorrect_answers_display">Количество неправильных ответов: %1$d</string>
    <string name="correct_answers">Количество правильных ответов:</string>
    <string name="incorrect_answers">Количество неправильных ответов:</string>
    <string name="selected_topic">Выбранная тема</string>
    <string name="question_number">1/10</string>
    <string name="question">Вопрос</string>
    <string name="answer_1">Первый ответ</string>
    <string name="answer_2">Второй ответ</string>
    <string name="answer_3">Третий ответ</string>
    <string name="answer_4">Четвертый ответ</string>
    <string name="question_display">%1$d/%2$d</string>
    <string name="question1_title">Какие периоды первобытного строя существовали?</string>
    <string name="question1_option1">Каменный, бронзовый, железный века</string>
    <string name="question1_option2">Древний, средний, новый века</string>
    <string name="question1_option3">Каменный, золотой, серебряный века</string>
    <string name="question1_option4">Бронзовый, железный, стеклянный века</string>
    <string name="question1_correct_answer">Каменный, бронзовый, железный века</string>
    <string name="question2_title">Кто такие кроманьонцы?</string>
    <string name="question2_option1">Первобытные люди, жившие 40–35 тысяч лет назад</string>
    <string name="question2_option2">Люди железного века</string>
    <string name="question2_option3">Древние жители Африки</string>
    <string name="question2_option4">Создатели первых металлических орудий</string>
    <string name="question2_correct_answer">Первобытные люди, жившие 40–35 тысяч лет назад</string>
    <string name="question3_title">Какие достижения были в каменном веке? (2 варианта)</string>
    <string name="question3_option1">Освоение огня</string>
    <string name="question3_option2">Изобретение остроконечных орудий</string>
    <string name="question3_option3">Производство железных изделий</string>
    <string name="question3_option4">Собирательство и охота на мамонтов</string>
    <string name="question3_correct_answer">Освоение огня, Изобретение остроконечных орудий</string>
    <string name="question4_title">Какой образ жизни начали вести первобытные люди в каменном веке?</string>
    <string name="question4_option1">Оседлый</string>
    <string name="question4_option2">Кочевой</string>
    <string name="question4_option3">Производственный</string>
    <string name="question4_option4">Земледельческий</string>
    <string name="question4_correct_answer">Оседлый</string>
    <string name="question5_title">Когда начался бронзовый век?</string>
    <string name="question5_option1">В конце III тысячелетия до н. э.</string>
    <string name="question5_option2">Со II тысячелетия до н. э.</string>
    <string name="question5_option3">С VIII века до н. э.</string>
    <string name="question5_option4"> С начала I тысячелетия до н. э.</string>
    <string name="question5_correct_answer">Со II тысячелетия до н. э.</string>
    <string name="question6_title">Какие изменения произошли в бронзовом веке? (2 варианта)</string>
    <string name="question6_option1">Переход к производящему хозяйству</string>
    <string name="question6_option2">Освоение железной руды</string>
    <string name="question6_option3">Начало подсечно-огневого земледелия</string>
    <string name="question6_option4"> Замена матриархата патриархатом</string>
    <string name="question6_correct_answer">Переход к производящему хозяйству, Замена матриархата патриархатом</string>
    <string name="question7_title">Какие материалы использовались для орудий в каменном и бронзовом веках?</string>
    <string name="question7_option1">Камень и бронза</string>
    <string name="question7_option2"> Железо и медь</string>
    <string name="question7_option3">Камень и железо</string>
    <string name="question7_option4">Кремень и бронза</string>
    <string name="question7_correct_answer">Камень и бронза</string>
    <string name="question8_title">Что появилось в железном веке? (2 варианта)</string>
    <string name="question8_option1">Оседлое земледелие</string>
    <string name="question8_option2">Пашенное земледелие</string>
    <string name="question8_option3">Имущественное неравенство</string>
    <string name="question8_option4">Изготовление изделий из бронзы</string>
    <string name="question8_correct_answer">Пашенное земледелие, Имущественное неравенство</string>
    <string name="question9_title">Какие обычаи и верования были связаны с похоронными обрядами? (2 варианта)</string>
    <string name="question9_option1">Вера в бессмертие души</string>
    <string name="question9_option2">Курганы над могилами</string>
    <string name="question9_option3">Мумии и саркофаги</string>
    <string name="question9_option4">Поклонение сверхъестественным силам природы</string>
    <string name="question9_correct_answer">Вера в бессмертие души, Курганы над могилами</string>
    <string name="question10_title">Примеры искусства первобытного строя включают: (2 варианта)</string>
    <string name="question10_option1">Скульптуру</string>
    <string name="question10_option2">Изготовление музыкальных инструментов</string>
    <string name="question10_option3">Письменность</string>
    <string name="question10_option4">Женские украшения</string>
    <string name="question10_correct_answer">Скульптуру, Женские украшения</string>
    <string name="f_question1_title">Какое событие произошло в конце IX века?</string>
    <string name="f_question1_option1">Образование Киевской Руси</string>
    <string name="f_question1_option2">Появление христианства</string>
    <string name="f_question1_option3">Основание Полоцка</string>
    <string name="f_question1_option4">Нападение на Минск</string>
    <string name="f_question1_correct_answer">Образование Киевской Руси</string>
    <string name="f_question2_title">Кто был первым полоцким князем?</string>
    <string name="f_question2_option1">Владимир</string>
    <string name="f_question2_option2">Изяслав</string>
    <string name="f_question2_option3">Рогволод</string>
    <string name="f_question2_option4">Брячислав</string>
    <string name="f_question2_correct_answer">Рогволод</string>
    <string name="f_question3_title">Какие события связаны с Рогнедой? (2 варианта)</string>
    <string name="f_question3_option1">Брак с князем Владимиром</string>
    <string name="f_question3_option2">Переход в монашество под именем Анастасия</string>
    <string name="f_question3_option3">Захват Новгорода</string>
    <string name="f_question3_option4">Нападение на Минск</string>
    <string name="f_question3_correct_answer">Брак с князем Владимиром, Переход в монашество под именем Анастасия</string>
    <string name="f_question4_title">Какой полоцкий князь был прозван Чародеем?</string>
    <string name="f_question4_option1">Брячислав</string>
    <string name="f_question4_option2">Всеслав</string>
    <string name="f_question4_option3">Изяслав</string>
    <string name="f_question4_option4">Рогволод</string>
    <string name="f_question4_correct_answer">Всеслав</string>
    <string name="f_question5_title">Какие события произошли в 1067 году? (2 варианта)</string>
    <string name="f_question5_option1">Захват Новгорода Всеславом</string>
    <string name="f_question5_option2">Битва на реке Немиге</string>
    <string name="f_question5_option3">Переход Туровского княжества к самостоятельной династии</string>
    <string name="f_question5_option4">Возведение Пинска над Туровом</string>
    <string name="f_question5_correct_answer">Битва на реке Немиге, Возведение Пинска над Туровом</string>
    <string name="f_question6_title">Что сочетала власть князя в Полоцком княжестве? (2 варианта)</string>
    <string name="f_question6_option1">Командование войском</string>
    <string name="f_question6_option2">Ведение торговли</string>
    <string name="f_question6_option3">Наличие вече</string>
    <string name="f_question6_option4">Написание законов</string>
    <string name="f_question6_correct_answer"> Командование войском, Наличие вече</string>
    <string name="f_question7_title">Что представляет собой сборник «Русская правда»? (2 варианта)</string>
    <string name="f_question7_option1">Законодательный кодекс Киевской Руси</string>
    <string name="f_question7_option2">Сборник религиозных текстов</string>
    <string name="f_question7_option3">Законы, основанные на «суде Божьем»</string>
    <string name="f_question7_option4">Свод военных приказов князя</string>
    <string name="f_question7_correct_answer">Законодательный кодекс Киевской Руси, Законы, основанные на «суде Божьем»</string>
    <string name="f_question8_title">Какой город был центром Туровского княжества?</string>
    <string name="f_question8_option1">Пинск</string>
    <string name="f_question8_option2">Туров</string>
    <string name="f_question8_option3">Минск</string>
    <string name="f_question8_option4">Новгород</string>
    <string name="f_question8_correct_answer">Туров</string>
    <string name="f_question9_title">Что произошло в Туровском княжестве в XII веке? (2 варианта)</string>
    <string name="f_question9_option1">Образование самостоятельной княжеской династии</string>
    <string name="f_question9_option2">Принятие христианства</string>
    <string name="f_question9_option3">Появление феодальной раздробленности</string>
    <string name="f_question9_option4">Захват Пинском контроля над Туровом</string>
    <string name="f_question9_correct_answer">Образование самостоятельной княжеской династии, Появление феодальной раздробленности</string>
    <string name="f_question10_title">Какую роль играл город Пинск? (2 варианта)</string>
    <string name="f_question10_option1">Центр водного пути из Киева в Польшу</string>
    <string name="f_question10_option2">Главный город Киевской Руси</string>
    <string name="f_question10_option3">Конкурент Турова</string>
    <string name="f_question10_option4">Место проведения вече</string>
    <string name="f_question10_correct_answer">Центр водного пути из Киева в Польшу, Конкурент Турова</string>
    <string name="m_question1_title">Когда началось распространение христианской веры на белорусских землях?</string>
    <string name="m_question1_option1">IX век</string>
    <string name="m_question1_option2">X век</string>
</resources>