<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:background="@color/white">

    <ImageView
        android:id="@+id/myImageView"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_marginTop="34dp"
        android:contentDescription="@string/login_icon_description"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/login"/>

    <TextView
        android:id="@+id/loginTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_title"
        android:textSize="30sp"
        android:layout_marginStart="55dp"
        android:layout_marginTop="34dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/myImageView" />
    
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/email_lin"
        android:layout_marginTop="34dp"
        android:layout_marginStart="50dp"
        app:layout_constraintTop_toBottomOf="@+id/loginTitle"
        app:layout_constraintStart_toStartOf="parent"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/emailIcon"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:contentDescription="@string/email_icon_description"
            android:src="@drawable/email"
            android:layout_gravity="center_vertical"/>

        <EditText
            android:layout_width="242dp"
            android:layout_height="48dp"
            android:hint="@string/email"
            android:layout_marginStart="9dp"
            android:id="@+id/emailId"
            android:inputType="textEmailAddress"
            android:autofillHints="emailAddress"
        />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/password_lin"
        android:layout_marginTop="18dp"
        android:layout_marginStart="50dp"
        app:layout_constraintTop_toBottomOf="@+id/email_lin"
        app:layout_constraintStart_toStartOf="parent"
        android:orientation="horizontal"
        >
        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:contentDescription="@string/password_icon_description"
            android:src="@drawable/password"
            android:id="@+id/pass_icon"
            android:layout_gravity="center_vertical"
            />

        <EditText
            android:layout_width="242dp"
            android:layout_height="48dp"
            android:hint="@string/password"
            android:layout_marginStart="9dp"
            android:id="@+id/passId"
            android:inputType="textPassword"
            android:autofillHints="newPassword"
            />
    </LinearLayout>

    <Button
        android:id="@+id/loginBtn"
        android:layout_width="268dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/blue"
        android:text="@string/login_title"
        android:layout_marginTop="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_lin" />
    
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/loginBtn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="50dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/first_time"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/go_to_register_activity_tv"
            android:textColor="@color/blue"
            android:text="@string/signup"
            android:layout_marginStart="7dp"/>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>