<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".QuizResults">

    <ImageView
        android:id="@+id/congratsIcon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="-50dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/quiz_icon_description"
        android:src="@drawable/quiz"
        />

    <!-- Область с результатами в виде квадрата -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="344dp"
        android:layout_below="@+id/congratsIcon"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="-77dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/svitok"
        android:elevation="4dp"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            android:id="@+id/successTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/result"
            android:textColor="#000000"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/correctAnswers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/correct_answers"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/inCorrectAnswers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/incorrect_answers"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/startNewQuizBtn"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/start_new_quiz"
        android:layout_alignParentBottom="true"
        android:layout_margin="50dp"
        android:background="@drawable/round_back_green"
        />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/shareResultsBtn"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="поделиться"
        android:layout_above="@id/startNewQuizBtn"
        android:layout_marginTop="50dp"
        android:background="@drawable/round_back_green"
        />


</RelativeLayout>
