<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".LearnTicketsActivity">
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/backBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="назад"
        android:textColor="#CC000000"
        android:textStyle="bold"
        android:textSize="16sp"
        android:background="@drawable/round_back_green"
        android:layout_marginBottom="15dp"
        android:layout_marginTop="10dp"/>


    <TextView
        android:id="@+id/chooseTicket"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#99FFFFFF"
        android:layout_marginTop="70dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="20dp"
        android:text="Выберите билет для изучения:"
        />

    <!--НАЧАЛО ПЕРВОЙ ЛИНИИ -->
    <LinearLayout
        android:id="@+id/line_1_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"

        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:weightSum="2"
        android:baselineAligned="false"
        android:layout_below="@+id/chooseTicket">

        <!--ОБЩАЯ ЭРУДИЦИЯ -->
        <LinearLayout
            android:id="@+id/learn_1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:padding="20dp"
            android:layout_marginEnd="5dp"
            android:background="@drawable/round_back_white"
            android:orientation="vertical">

            <ImageView
                android:layout_gravity="center"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@drawable/one"
                android:contentDescription="@string/generalErudition_icon_description" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="1 билет"
                android:textColor="#CC000000"
                android:textSize="18sp"
                android:textStyle="bold"/>
        </LinearLayout>
        <!--КИНО И ТЕЛЕВИДЕНИЕ -->
        <LinearLayout
            android:id="@+id/learn_2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:padding="20dp"
            android:layout_marginStart="5dp"
            android:background="@drawable/round_back_white"
            android:orientation="vertical">

            <ImageView
                android:layout_gravity="center"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@drawable/two"
                android:contentDescription="@string/quiz_icon_description" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="2 билет"
                android:textColor="#CC000000"
                android:textSize="18sp"
                android:textStyle="bold"/>
        </LinearLayout>
    </LinearLayout>

    <!--НАЧАЛО ВТОРОЙ ЛИНИИ -->
    <LinearLayout
        android:id="@+id/line_2_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:layout_below="@+id/line_1_2"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:weightSum="2">

        <!--МУЗЫКА -->
        <LinearLayout
            android:id="@+id/learn_3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:padding="20dp"
            android:layout_marginEnd="5dp"
            android:background="@drawable/round_back_white"
            android:orientation="vertical">

            <ImageView
                android:layout_gravity="center"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@drawable/three"
                android:contentDescription="@string/music_icon_description" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="3 билет"
                android:textColor="#CC000000"
                android:textSize="18sp"
                android:textStyle="bold"/>
        </LinearLayout>
        <!--ГЕОГРАФИЯ -->
        <LinearLayout
            android:id="@+id/learn_4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:padding="20dp"
            android:layout_marginStart="5dp"
            android:background="@drawable/round_back_white"
            android:orientation="vertical">

            <ImageView
                android:layout_gravity="center"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@drawable/four"
                android:contentDescription="@string/geography_icon_description" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="4 билет"
                android:textColor="#CC000000"
                android:textSize="18sp"
                android:textStyle="bold"/>
        </LinearLayout>
    </LinearLayout>
    <!--КОНЕЦ ВТОРОЙ ЛИНИИ-->


    <!-- КНОПКА НАЧАТЬ ВИКТОРИНУ -->
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/startTicket"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Начать изучение"
        android:layout_marginTop="25dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:textColor="#CC000000"
        android:textStyle="bold"
        android:textSize="16sp"
        android:background="@drawable/round_back_green"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="15dp"/>


</RelativeLayout>